--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ h1 {
 }
 
 #result {
-  margin-top: 20px;
-  font-size: 18px;
-  font-weight: bold;
+  margin: 20px 0 0 0;
+  font-size: 22px;
+  font-weight: 600;
 }
